@@ -234,11 +234,11 @@ int main(int argc, char **argv){
 	reset_cgi_vars();
 
 	/* read the CGI configuration file */
-	result=read_cgi_config_file(DEFAULT_CGI_CONFIG_FILE);
+	result=read_cgi_config_file(get_cgi_config_location());
 	if(result==ERROR){
 		document_header(FALSE);
 		if(create_type==CREATE_HTML)
-			cgi_config_file_error(DEFAULT_CGI_CONFIG_FILE);
+			cgi_config_file_error(get_cgi_config_location());
 		document_footer();
 		return ERROR;
 	        }
@@ -270,7 +270,7 @@ int main(int argc, char **argv){
                 }
 
 	/* read all status data */
-	result=read_all_status_data(DEFAULT_CGI_CONFIG_FILE,READ_ALL_STATUS_DATA);
+	result=read_all_status_data(get_cgi_config_location(),READ_ALL_STATUS_DATA);
 	if(result==ERROR){
 		document_header(FALSE);
 		if(create_type==CREATE_HTML)
@@ -287,7 +287,7 @@ int main(int argc, char **argv){
 	get_authentication_information(&current_authdata);
 
 	/* read in extended host information */
-	read_extended_object_config_data(DEFAULT_CGI_CONFIG_FILE,READ_EXTENDED_HOST_INFO);
+	read_extended_object_config_data(get_cgi_config_location(),READ_EXTENDED_HOST_INFO);
 
 	/* display the network map... */
 	display_map();
