@@ -142,7 +142,7 @@ int main(int argc, char **argv){
 	reset_cgi_vars();
 
 	/* read the CGI configuration file */
-	result=read_cgi_config_file(DEFAULT_CGI_CONFIG_FILE);
+	result=read_cgi_config_file(get_cgi_config_location());
 	if(result==ERROR){
 		document_header();
 		return ERROR;
@@ -167,7 +167,7 @@ int main(int argc, char **argv){
 		return ERROR;
 
 	/* read all status data */
-	result=read_all_status_data(DEFAULT_CGI_CONFIG_FILE,READ_ALL_STATUS_DATA);
+	result=read_all_status_data(get_cgi_config_location(),READ_ALL_STATUS_DATA);
 	if(result==ERROR){
 		free_memory();
 		return ERROR;
@@ -177,7 +177,7 @@ int main(int argc, char **argv){
 	get_authentication_information(&current_authdata);
 
 	/* read in extended host information */
-	read_extended_object_config_data(DEFAULT_CGI_CONFIG_FILE,READ_EXTENDED_HOST_INFO);
+	read_extended_object_config_data(get_cgi_config_location(),READ_EXTENDED_HOST_INFO);
 
 	/* display the 3-D VRML world... */
 	display_world();
